FlightPath 6.x Changelog
========================


2022-08-17
  Added tweaks to the static screen "dialog-empty", so that it displays a throbber graphic while loading.
  
  Changed name of dialog-empty to dialog-loading.php, for clarity.
  
  In clone_advising, made it so you can enter comments after # symbol.

  Moved the autocomplete function to find students from calendar module to the student_search module,
  and gave it more than the default option for output.  See student_search.module's student_search_ajax_autocomplete_student()
  for more details.


2022-08-12
  Fixed typos in watchdog() command in the engagements module.
  
  Fixed issue in engagements where all incoming SMS got an error relating to reading media which wasn't there.

  If a number sends a text message, and their CWID cannot be found, the notification message changes to reflect that.
  
  When saving a new notification, the insert id (hid in table notification_history) is returned.  


2022-08-11
  Cleaned up logic which loads permissions for users, using less memory.
  
  Added ability for students to schedule appointments with faculty & staff in other departments (not just their
  advisors).


2022-08-10
  Added breadcrumbs to certain admin functions.
  

2022-08-04
  Added new function to db.inc, making it easier to get school_id from a user_id.
  
  Added new setting to School Settings, for specifying departments.
  
  Made changes in School settings to accomodate new 'Appointment settings' form.  
  
  Altered User module to make use of the new "departments" setting as a select list rather than a free-type field.
  
  Built new 'Appointment settings' form, so admins may edit global settings having to do with who may accept appointments.
  

2022-08-02
  Moved around code so that the user module is responsible for displaying text message recipient options (instead of the code being
  in hook_form_alter from engagements).
  